Playlist name setting is ignored when creating playlist
Using EasyTag v2.4.3 when creating a playlist there is an option to use a mask for the playlist name in the playlist settings dialog. But the string entered in the dialog's form field is ignored when saving the playlist. Instead the name of the current directory is used as the playlist's name.
Edited by atarax42