Fix playlist name radio button initial state

As the first radio button of the group is active by default, bind the
setting to the second button in the group, and invert the boolean.

https://gitlab.gnome.org/GNOME/easytag/issues/40